[package]
name = "testme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# feldspar = { git = "https://github.com/bonsairobo/feldspar.git" }

[dependencies.bevy]
version = "0.8.0"
features = ["jpeg", "tga", "bmp", "dds", "flac", "mp3", "wav"]
